--- a/loja.html
+++ b/loja.html
@@ -313,7 +313,7 @@
             <hr class="my-4" style="border-color: #333;">
             <div class="row">
                 <div class="col-12 text-center">
-                    <p class="mb-0">© 2024 CHERRYBOMB. TODOS OS DIREITOS RESERVADOS.</p>
+                    <p class="mb-0">© 2025 CHERRYBOMB. TODOS OS DIREITOS RESERVADOS.</p>
                 </div>
             </div>
         </div>
@@ -327,7 +327,7 @@
                 id: 1,
                 name: "Gatinhos Cherry Bomb",
                 price: 129.90,
-                image: "https://via.placeholder.com/300x200/FF3576/ffffff?text=Gatinhos",
+                image: "imagens/Oculos01.jpg",
                 description: "Modelos gatinho - Os descolados"
             },
             {
@@ -555,4 +555,5 @@
         });
     </script>
 </body>
+
 </html>
