--- a/loja.html
+++ b/loja.html
@@ -214,7 +214,7 @@
                         <a class="nav-link active" href="loja.html">Nossos Óculos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contato">Contato</a>
+                        <a class="nav-link" href="https://wa.link/udiiux">Contato</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link position-relative" href="#" onclick="showCart()">
@@ -313,7 +313,7 @@
             <hr class="my-4" style="border-color: #333;">
             <div class="row">
                 <div class="col-12 text-center">
-                    <p class="mb-0">© 2025 CHERRYBOMB. TODOS OS DIREITOS RESERVADOS.</p>
+                    <p class="mb-0">© 2024 CHERRYBOMB. TODOS OS DIREITOS RESERVADOS.</p>
                 </div>
             </div>
         </div>
@@ -334,63 +334,63 @@
                 id: 2,
                 name: "Armações de Metal",
                 price: 149.90,
-                image: "https://via.placeholder.com/300x200/FF005C/ffffff?text=Metal",
+                image: "imagens/Oculos02.jpg",
                 description: "Óculos escuros de metal - Clássicos"
             },
             {
                 id: 3,
                 name: "Clip-on Cherry Bomb",
                 price: 179.90,
-                image: "https://via.placeholder.com/300x200/FF3576/ffffff?text=Clip-on",
+                image: "imagens/Oculos04.jpg",
                 description: "2 em 1 - Rock n roll"
             },
             {
                 id: 4,
                 name: "Lentes Polarizadas",
                 price: 199.90,
-                image: "https://via.placeholder.com/300x200/FF005C/ffffff?text=Polarizadas",
+                image: "imagens/Oculos05.jpg",
                 description: "Proteção UV total - Alta qualidade"
             },
             {
                 id: 5,
                 name: "Modelo Vintage",
                 price: 159.90,
-                image: "https://via.placeholder.com/300x200/FF3576/ffffff?text=Vintage",
+                image: "imagens/Oculos06.jpg",
                 description: "Anos 70/80 - Estilo retrô"
             },
             {
                 id: 6,
                 name: "Óculos Modernos",
                 price: 139.90,
-                image: "https://via.placeholder.com/300x200/FF005C/ffffff?text=Modernos",
+                image: "imagens/Oculos07.jpg",
                 description: "Design atual - Tecnologia avançada"
             },
             {
                 id: 7,
                 name: "Coleção Limited",
                 price: 229.90,
-                image: "https://via.placeholder.com/300x200/FF3576/ffffff?text=Limited",
+                image: "imagens/Oculos08.jpg",
                 description: "Edição limitada - Exclusivo"
             },
             {
                 id: 8,
                 name: "Óculos Esportivos",
                 price: 189.90,
-                image: "https://via.placeholder.com/300x200/FF005C/ffffff?text=Esportivos",
+                image: "imagens/Oculos09.jpg",
                 description: "Performance e estilo - Atividade física"
             },
             {
                 id: 9,
                 name: "Aviador Cherry Bomb",
                 price: 169.90,
-                image: "https://exemplo.com/imagem-aviador.jpg",
+                image: "imagens/Oculos10.jpg",
                 description: "Clássico aviador com lentes polarizadas"
             },
             {
                 id: 10,
                 name: "Retrô Redondo",
                 price: 149.90,
-                image: "https://exemplo.com/imagem-retro.jpg",
+                image: "imagens/Oculos01.jpg",
                 description: "Estilo anos 60 com armação redonda"
             }
         ];
@@ -407,7 +407,7 @@
                     <div class="col-md-6 col-lg-3">
                         <div class="card product-card h-100">
                             <div class="product-image">
-                                <i class="fas fa-sunglasses"></i>
+                                <img src="${product.image}" alt="${product.name}" style="width: 100%; height: 100%; object-fit: cover;">
                             </div>
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title fw-bold">${product.name}</h5>
@@ -555,5 +555,4 @@
         });
     </script>
 </body>
-
 </html>
