--- a/loja.html
+++ b/loja.html
@@ -334,63 +334,63 @@
                 id: 2,
                 name: "Armações de Metal",
                 price: 149.90,
-                image: "imagens/Oculos02.jpg",
+                image: "imagens/oculos02.jpg",
                 description: "Óculos escuros de metal - Clássicos"
             },
             {
                 id: 3,
                 name: "Clip-on Cherry Bomb",
                 price: 179.90,
-                image: "imagens/Oculos04.jpg",
+                image: "imagens/oculos04.jpg",
                 description: "2 em 1 - Rock n roll"
             },
             {
                 id: 4,
                 name: "Lentes Polarizadas",
                 price: 199.90,
-                image: "imagens/Oculos05.jpg",
+                image: "imagens/oculos05.jpg",
                 description: "Proteção UV total - Alta qualidade"
             },
             {
                 id: 5,
                 name: "Modelo Vintage",
                 price: 159.90,
-                image: "imagens/Oculos06.jpg",
+                image: "imagens/oculos06.jpg",
                 description: "Anos 70/80 - Estilo retrô"
             },
             {
                 id: 6,
                 name: "Óculos Modernos",
                 price: 139.90,
-                image: "imagens/Oculos07.jpg",
+                image: "imagens/oculos07.jpg",
                 description: "Design atual - Tecnologia avançada"
             },
             {
                 id: 7,
                 name: "Coleção Limited",
                 price: 229.90,
-                image: "imagens/Oculos08.jpg",
+                image: "imagens/oculos08.jpg",
                 description: "Edição limitada - Exclusivo"
             },
             {
                 id: 8,
                 name: "Óculos Esportivos",
                 price: 189.90,
-                image: "imagens/Oculos09.jpg",
+                image: "imagens/oculos09.jpg",
                 description: "Performance e estilo - Atividade física"
             },
             {
                 id: 9,
                 name: "Aviador Cherry Bomb",
                 price: 169.90,
-                image: "imagens/Oculos10.jpg",
+                image: "imagens/oculos10.jpg",
                 description: "Clássico aviador com lentes polarizadas"
             },
             {
                 id: 10,
                 name: "Retrô Redondo",
                 price: 149.90,
-                image: "imagens/Oculos01.jpg",
+                image: "imagens/oculos01.jpg",
                 description: "Estilo anos 60 com armação redonda"
             }
         ];
@@ -556,3 +556,4 @@
     </script>
 </body>
 </html>
+
