--- a/loja.html
+++ b/loja.html
@@ -313,7 +313,7 @@
             <hr class="my-4" style="border-color: #333;">
             <div class="row">
                 <div class="col-12 text-center">
-                    <p class="mb-0">© 2025 CHERRYBOMB. TODOS OS DIREITOS RESERVADOS.</p>
+                    <p class="mb-0">© 2024 CHERRYBOMB. TODOS OS DIREITOS RESERVADOS.</p>
                 </div>
             </div>
         </div>
@@ -341,57 +341,127 @@
                 id: 3,
                 name: "Clip-on Cherry Bomb",
                 price: 179.90,
-                image: "imagens/oculos04.jpg",
+                image: "imagens/oculos03.png",
                 description: "2 em 1 - Rock n roll"
             },
             {
                 id: 4,
                 name: "Lentes Polarizadas",
                 price: 199.90,
-                image: "imagens/oculos05.jpg",
+                image: "imagens/oculos04.jpg",
                 description: "Proteção UV total - Alta qualidade"
             },
             {
                 id: 5,
                 name: "Modelo Vintage",
                 price: 159.90,
-                image: "imagens/oculos06.jpg",
+                image: "imagens/oculos05.jpg",
                 description: "Anos 70/80 - Estilo retrô"
             },
             {
                 id: 6,
                 name: "Óculos Modernos",
                 price: 139.90,
-                image: "imagens/oculos07.jpg",
+                image: "imagens/oculos06.jpg",
                 description: "Design atual - Tecnologia avançada"
             },
             {
                 id: 7,
                 name: "Coleção Limited",
                 price: 229.90,
-                image: "imagens/oculos08.jpg",
+                image: "imagens/oculos07.jpg",
                 description: "Edição limitada - Exclusivo"
             },
             {
                 id: 8,
                 name: "Óculos Esportivos",
                 price: 189.90,
-                image: "imagens/oculos09.jpg",
+                image: "imagens/oculos08.jpg",
                 description: "Performance e estilo - Atividade física"
             },
             {
                 id: 9,
                 name: "Aviador Cherry Bomb",
                 price: 169.90,
-                image: "imagens/oculos10.jpg",
+                image: "imagens/oculos09.jpg",
                 description: "Clássico aviador com lentes polarizadas"
             },
             {
                 id: 10,
                 name: "Retrô Redondo",
                 price: 149.90,
-                image: "imagens/oculos01.jpg",
+                image: "imagens/oculos10.jpg",
                 description: "Estilo anos 60 com armação redonda"
+            },
+            {
+                id: 11,
+                name: "Óculos Premium",
+                price: 249.90,
+                image: "imagens/oculos12.jpg",
+                description: "Qualidade premium - Máximo conforto"
+            },
+            {
+                id: 12,
+                name: "Modelo Exclusivo",
+                price: 279.90,
+                image: "imagens/oculos13.jpg",
+                description: "Design exclusivo - Edição especial"
+            },
+            {
+                id: 13,
+                name: "Óculos Clássico",
+                price: 189.90,
+                image: "imagens/oculos14.jpg",
+                description: "Estilo atemporal - Sempre na moda"
+            },
+            {
+                id: 14,
+                name: "Aviador Premium",
+                price: 219.90,
+                image: "imagens/oculos15.jpg",
+                description: "Aviador premium com lentes especiais"
+            },
+            {
+                id: 15,
+                name: "Óculos Esportivo Pro",
+                price: 259.90,
+                image: "imagens/oculos16.jpg",
+                description: "Performance profissional - Alta tecnologia"
+            },
+            {
+                id: 16,
+                name: "Modelo Elegante",
+                price: 199.90,
+                image: "imagens/oculos17.jpg",
+                description: "Elegância e sofisticação - Para ocasiões especiais"
+            },
+            {
+                id: 17,
+                name: "Óculos Casual",
+                price: 169.90,
+                image: "imagens/oculos18.jpg",
+                description: "Estilo casual - Perfeito para o dia a dia"
+            },
+            {
+                id: 18,
+                name: "Aviador Sport",
+                price: 239.90,
+                image: "imagens/oculos19.jpg",
+                description: "Aviador esportivo - Resistente e moderno"
+            },
+            {
+                id: 19,
+                name: "Óculos Fashion",
+                price: 189.90,
+                image: "imagens/oculos20.jpg",
+                description: "Tendência fashion - Design contemporâneo"
+            },
+            {
+                id: 20,
+                name: "Coleção Cherry Bomb",
+                price: 299.90,
+                image: "imagens/óculos 13.jpg",
+                description: "Coleção especial Cherry Bomb - Única e exclusiva"
             }
         ];
 
@@ -556,5 +626,3 @@
     </script>
 </body>
 </html>
-
-
