--- a/index.html
+++ b/index.html
@@ -359,8 +359,8 @@
             <div class="row g-4">
                 <div class="col-md-4">
                     <div class="card product-card">
-                        <div class="product-image">
-                            <i class="fas fa-sunglasses"></i>
+                        <div class="product-image" style="background: linear-gradient(135deg, #FF6B9D 0%, #FF3576 100%);">
+                            <img src="imagens/Oculos01.jpg" alt="Gatinhos Cherry Bomb" style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px 15px 0 0;">
                         </div>
                         <div class="card-body text-center">
                             <h5 class="card-title fw-bold">Gatinhos Cherry Bomb</h5>
@@ -371,8 +371,8 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card product-card">
-                        <div class="product-image">
-                            <i class="fas fa-sunglasses"></i>
+                        <div class="product-image" style="background: linear-gradient(135deg, #FF6B9D 0%, #FF3576 100%);">
+                            <img src="imagens/Oculos02.jpg" alt="Armações de Metal" style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px 15px 0 0;">
                         </div>
                         <div class="card-body text-center">
                             <h5 class="card-title fw-bold">Armações de Metal</h5>
@@ -383,8 +383,8 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card product-card">
-                        <div class="product-image">
-                            <i class="fas fa-sunglasses"></i>
+                        <div class="product-image" style="background: linear-gradient(135deg, #FF6B9D 0%, #FF3576 100%);">
+                            <img src="imagens/Oculos03.png" alt="Clip-on" style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px 15px 0 0;">
                         </div>
                         <div class="card-body text-center">
                             <h5 class="card-title fw-bold">Clip-on</h5>
@@ -451,7 +451,7 @@
             <hr class="my-4" style="border-color: #333;">
             <div class="row">
                 <div class="col-12 text-center">
-                    <p class="mb-0">© 2024 CHERRYBOMB. TODOS OS DIREITOS RESERVADOS.</p>
+                    <p class="mb-0">© 2025 CHERRYBOMB. TODOS OS DIREITOS RESERVADOS.</p>
                 </div>
             </div>
         </div>
