--- a/sucesso.html
+++ b/sucesso.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <style>
         :root {
             --cherry-pink: #FF3576;
@@ -199,9 +200,51 @@
             color: var(--cherry-dark);
         }
 
+        .cart-float {
+            position: fixed;
+            bottom: 24px;
+            right: 24px;
+            z-index: 1050;
+            background: var(--cherry-pink);
+            color: #fff;
+            border-radius: 50%;
+            width: 56px;
+            height: 56px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 4px 16px rgba(0,0,0,0.15);
+            cursor: pointer;
+            transition: background 0.2s;
+        }
+        .cart-float:hover {
+            background: var(--cherry-red);
+        }
+        .cart-badge-float {
+            position: absolute;
+            top: 8px;
+            right: 8px;
+            background: #fff;
+            color: var(--cherry-red);
+            border-radius: 50%;
+            padding: 2px 7px;
+            font-size: 0.8rem;
+            font-weight: bold;
+        }
         @media (max-width: 768px) {
             .success-section {
                 padding: 80px 0 60px;
+            }
+            .cart-float {
+                bottom: 16px;
+                right: 16px;
+                width: 48px;
+                height: 48px;
+            }
+            .cart-badge-float {
+                top: 4px;
+                right: 4px;
+                font-size: 0.7rem;
             }
         }
     </style>
@@ -384,13 +427,48 @@
             <hr class="my-4" style="border-color: #333;">
             <div class="row">
                 <div class="col-12 text-center">
-                    <p class="mb-0">© 2024 CHERRYBOMB. TODOS OS DIREITOS RESERVADOS.</p>
+                    <p class="mb-0">© 2025 CHERRYBOMB. TODOS OS DIREITOS RESERVADOS.</p>
                 </div>
             </div>
         </div>
     </footer>
 
+    <div class="cart-float" onclick="showCart()" style="display: flex;">
+        <i class="fas fa-shopping-cart fa-lg"></i>
+        <span class="cart-badge-float" id="cartCount">0</span>
+    </div>
+    <!-- Cart Modal -->
+    <div class="modal fade" id="cartModal" tabindex="-1">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">
+                        <i class="fas fa-shopping-cart me-2"></i>Carrinho de Compras
+                    </h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <div id="cartItems">
+                        <!-- Cart items will be displayed here -->
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Continuar Comprando</button>
+                    <button type="button" class="btn btn-cherry" onclick="proceedToCheckout()">
+                        <i class="fas fa-credit-card me-2"></i>Finalizar Compra
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        duration: 1200 // duração em milissegundos (1.2 segundos)
+      });
+    </script>
     <script>
         let orderData = null;
 
