--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: url('imagens/cherrybombNI.jpeg' viewBox="0 0 100 100"><defs><pattern id="grain" width="100" height="100" patternUnits="userSpaceOnUse"><circle cx="50" cy="50" r="1" fill="rgba(255,255,255,0.1)"/></pattern></defs><rect width="100" height="100" fill="url(%23grain)"/></svg>');
+            background: url('imagens/cherrybombNI.jpeg');
             opacity: 0.3;
         }
 
@@ -511,4 +511,5 @@
     </script>
 </body>
 </html>
+
 
