--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
             right: 0;
             bottom: 0;
             background: url('imagens/cherrybombNI.jpeg');
+            background-size: cover;
+            background-position: center;
             opacity: 0.3;
         }
 
@@ -511,5 +513,3 @@
     </script>
 </body>
 </html>
-
-
