--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@
         }
 
         .hero-section {
-            background: linear-gradient(135deg, rgba(255,53,118,0.7) 0%, rgba(255,0,92,0.7) 100%), url('https://images.unsplash.com/photo-1517841905240-472988babdf9?auto=format&fit=crop&w=1500&q=80');
-            background-size: cover;
-            background-position: center 40%;
+            background: linear-gradient(135deg, rgba(255,53,118,0.7) 0%, rgba(255,0,92,0.7) 100%);
             color: var(--cherry-white);
             padding: 120px 0;
             position: relative;
