--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="card product-card">
                         <div class="product-image" style="background: linear-gradient(135deg, #FF6B9D 0%, #FF3576 100%);">
-                            <img src="imagens/Oculos02.jpg" alt="Armações de Metal" style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px 15px 0 0;">
+                            <img src="imagens/oculos02.jpg" alt="Armações de Metal" style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px 15px 0 0;">
                         </div>
                         <div class="card-body text-center">
                             <h5 class="card-title fw-bold">Armações de Metal</h5>
@@ -429,7 +429,7 @@
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="card product-card">
                         <div class="product-image" style="background: linear-gradient(135deg, #FF6B9D 0%, #FF3576 100%);">
-                            <img src="imagens/Oculos03.png" alt="Clip-on" style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px 15px 0 0;">
+                            <img src="imagens/oculos03.png" alt="Clip-on" style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px 15px 0 0;">
                         </div>
                         <div class="card-body text-center">
                             <h5 class="card-title fw-bold">Clip-on</h5>
