--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         .hero-section {
             background: linear-gradient(135deg, rgba(255,53,118,0.7) 0%, rgba(255,0,92,0.7) 100%);
             color: var(--cherry-white);
-            padding: 120px 0;
+            padding: 180px 0 180px 0;
             position: relative;
             overflow: hidden;
         }
@@ -511,3 +511,4 @@
     </script>
 </body>
 </html>
+
