--- a/index.html
+++ b/index.html
@@ -417,10 +417,10 @@
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="card product-card">
                         <div class="product-image" style="background: linear-gradient(135deg, #FF6B9D 0%, #FF3576 100%);">
-                            <img src="imagens/oculos02.jpg" alt="Armações de Metal" style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px 15px 0 0;">
+                            <img src="imagens/oculos02.jpg" alt="Armações Resistentes" style="width: 100%; height: 100%; object-fit: cover; border-radius: 15px 15px 0 0;">
                         </div>
                         <div class="card-body text-center">
-                            <h5 class="card-title fw-bold">Armações de Metal</h5>
+                            <h5 class="card-title fw-bold">Armações resistentes</h5>
                             <p class="card-text">Óculos escuros de metal - Clássicos</p>
                             <a href="loja.html" class="btn btn-cherry btn-sm">Ver Modelo</a>
                         </div>
@@ -511,4 +511,5 @@
     </script>
 </body>
 </html>
+
 
