--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         .hero-section {
             background: linear-gradient(135deg, rgba(255,53,118,0.7) 0%, rgba(255,0,92,0.7) 100%);
-            color: var(--cherry-white);
+            color: var(--cherry-red);
             padding: 180px 0 180px 0;
             position: relative;
             overflow: hidden;
@@ -511,5 +511,6 @@
     </script>
 </body>
 </html>
+
 
 
