--- a/index.html
+++ b/index.html
@@ -199,12 +199,12 @@
         <a href="loja.html#productsContainer" class="btn par-perfeito-btn">Ver modelos</a>
       </div>
       <div class="par-perfeito-center d-flex flex-column justify-content-center align-items-center position-relative flex-shrink-0">
-        <span class="par-perfeito-main-title">NÓS FAZEMOS O PAR PERFEITO</span>
-        <div class="par-perfeito-img-hover">
-  <img src="imagens/oculos-sol.jpg" alt="Óculos de Sol" class="par-perfeito-img img-top">
-  <img src="imagens/oculos-grau.jpg" alt="Óculos de Grau" class="par-perfeito-img img-bottom">
+  <span class="par-perfeito-main-title">NÓS FAZEMOS O PAR PERFEITO</span>
+  <div class="par-perfeito-twentytwenty twentytwenty-container" style="width: 260px; max-width: 95vw; margin: 56px auto 0 auto; border-radius: 16px; box-shadow: 0 8px 24px rgba(255,53,118,0.10); overflow: hidden;">
+    <img src="imagens/oculos06.jpg" alt="Óculos de Sol" style="width:100%; height:auto; display:block; object-fit:contain; background:#fff;">
+    <img src="imagens/oculos08.jpg" alt="Óculos de Grau" style="width:100%; height:auto; display:block; object-fit:contain; background:#fff;">
+  </div>
 </div>
-      </div>
       <div class="par-perfeito-right d-flex flex-column justify-content-center align-items-start px-5 flex-fill bg-white">
         <span class="par-perfeito-subtitle mb-2 text-muted">para o seu uso diário</span>
         <h2 class="par-perfeito-title mb-2 text-dark">ÓCULOS DE GRAU</h2>
