--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
       </div>
       <div class="par-perfeito-center d-flex flex-column justify-content-center align-items-center position-relative flex-shrink-0">
   <span class="par-perfeito-main-title">NÓS FAZEMOS O PAR PERFEITO</span>
-  <div class="par-perfeito-twentytwenty twentytwenty-container" style="width: 260px; max-width: 95vw; margin: 56px auto 0 auto; border-radius: 16px; box-shadow: 0 8px 24px rgba(255,53,118,0.10); overflow: hidden;">
-    <img src="imagens/oculos06.jpg" alt="Óculos de Sol" style="width:100%; height:auto; display:block; object-fit:contain; background:#fff;">
-    <img src="imagens/oculos08.jpg" alt="Óculos de Grau" style="width:100%; height:auto; display:block; object-fit:contain; background:#fff;">
+  <div class="par-perfeito-twentytwenty twentytwenty-container">
+    <img src="imagens/oculos-sol.jpg" alt="Óculos de Sol">
+    <img src="imagens/oculos-grau.jpg" alt="Óculos de Grau">
   </div>
 </div>
       <div class="par-perfeito-right d-flex flex-column justify-content-center align-items-start px-5 flex-fill bg-white">
@@ -548,10 +548,10 @@
     <script>
       AOS.init({ duration: 1200 });
       $(function(){
-        $(".twentytwenty-container").twentytwenty({
-          default_offset_pct: 0.5
-        });
-      });
+  $(".par-perfeito-twentytwenty").twentytwenty({
+    default_offset_pct: 0.5
+  });
+});
     </script>
 </body>
 </html>
